# gnm-vlnverse-baseline

./: .gitignore  .pre-commit-config.yaml  BENCHMARK.md  COPYRIGHT.md  Makefile  QUICKSTART.md  README.md  THIRD_PARTY_NOTICES.md  fleetsafe-status.sh  install_desktop_launchers.sh  launch_fleetsafe_all.sh  pyproject.toml  requirements-demo.txt  requirements-ml.txt  requirements.txt  setup.py  start_full_demo.sh  stop_fleetsafe_all.sh  stop_full_demo.sh
IsaacLabAssets/: hospital_photorealistic.usd  validation_report.json
command-center/: docker-compose.yml  start.sh
config/: fleetsafe_real_robot.env  fleetsafe_vln.env
configs/: gnm_fleetsafe_isaac.yaml
docker/: Dockerfile.isaaclab  Dockerfile.mujoco  Dockerfile.ros2  Dockerfile.web  docker-compose.yml
docs/: DEBUGGING_AND_ISSUE_REGISTRY.md  EXPERIMENT_MATRIX.md  FLEETSAFE_GNM_IMPLEMENTATION_MANUAL.md  IMPLEMENTATION_OVERVIEW.md  IMPLEMENTATION_PLAN_MAY29.md  REAL_ROBOT_LIVE_MOTION_VALIDATION.md  REAL_ROBOT_RUNBOOK.md  REAL_ROBOT_VLN_OPERATION.md  REAL_ROBOT_VOICE_VLN_DEMO.md  REPOSITORY_GOVERNANCE.md  RESEARCH_SCOPE.md  USAGE.md  VLN_SAFE_ROBOT_ARCHITECTURE.md  YAHBOOM_URDF_TO_USD_IMPORT.md  track_a_track_b_completion_gates.md  v2.1_isaac_ros2_bridge_checklist.md  v2.2_yahboom_m3pro_sim_to_real_plan.md  v2.3_yahboom_isaac_import_topic_verification.md  v2.4.1_yahboom_visible_stage_ros2_scaffold.md  v2.4.2_yahboom_omnigraph_publishers.md  v2.4_yahboom_first_rosbag_episode.md  yahboom_control_scene_checklist.md  yahboom_to_fleetsafe_topic_mapping.md  yahboom_upstream_integration.md
fleet_safe_vla/: __init__.py  benchmark_version.py
fleetsafe_vln/: __init__.py
gnm_vlnverse/: README.md  __init__.py
hf_seed_manifest/: README.md
launch/: gnm_fleetsafe_isaac.launch.py
notebooks/: fleetsafe_gnm_yahboom_eda_training_safety_notebook.ipynb  fleetsafe_gnm_yahboom_eda_training_safety_notebook.py
paper/: annual_review_2026.tex  fleetsafe_paper.tex
results/: ablations.md  bo_followup_start_goal_successrate.md  dataset_manifest.md  formal_eval_report.md  may29_evaluation.json  may29_evaluation_full.json  reviewer_response_bo.md  scene_manifest.md  track_definitions.md
ros2_ws/src/fleet_safe_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/fleet_safe_bringup/launch/: h1_gazebo.launch.py  h1_hardware.launch.py  m3pro_gazebo.launch.py
ros2_ws/src/fleet_safe_bringup/worlds/: empty.sdf  hospital_corridor.sdf
ros2_ws/src/fleet_safe_control/: package.xml  setup.py
ros2_ws/src/fleet_safe_control/fleet_safe_control/: joint_controller.py
ros2_ws/src/fleet_safe_perception/: package.xml  setup.py
ros2_ws/src/fleet_safe_perception/fleet_safe_perception/: imu_processor.py
scripts/: add_yahboom_to_isaac_stage.sh  capture_fleetsafe_evidence.sh  capture_isaac_live.sh  capture_live_evidence.sh  capture_vlnverse_evidence.sh  check_fleetsafe_vlnverse_plus_demo.sh  download_vlntube_minimal_assets.sh  fix_iamgoodnavigator_asset_paths.sh  import_yahboom_m3_urdf_to_isaac.sh  inspect_vlnverse_scene_assets.sh  install_isaac_demo_deps.sh  open_dashboard.sh  pull_yahboom_assets_from_robot.sh  run_benchmark_smoke_test.sh  run_e2e_vln_motion_demo.sh  run_fleetsafe_vlnverse_plus_demo.sh  run_gnm_isaac_smoke_test.sh  run_iamgoodnavigator_episode.sh  run_iamgoodnavigator_smoke_test.sh  run_interactive_iamgoodnavigator_recording.sh  run_live_vln_demo.sh  run_real_imported_vln_demo.sh  run_real_imported_vln_demo_check.sh  run_safe_datagen_smoke_test.sh  run_vln_hub_smoke_test.sh  setup_iamgoodnavigator.sh  setup_vlntube.sh  setup_vlnverse.sh  setup_yahboom_m3_assets.sh  start_vlnverse_scene_demo.sh  validate_documentation.py
sdk/: README.md  __init__.py  client.py
tasks/: VLNVerse_scene.yaml  blind_corner.yaml  dynamic_human_crossing.yaml  hospital_corridor.yaml  nurse_station.yaml  warehouse_aisle.yaml
tests/: __init__.py  test_baseline_contract.py  test_benchmark_governance.py  test_cbf_math_contract.py  test_certificate_logger.py  test_certify_rosbag.py  test_dashboard.py  test_documentation_integrity.py  test_evidence_v8.py  test_explainability.py  test_fleetsafe_perception_node.py  test_hospital_asset_library.py  test_hospital_capture.py  test_hospital_scene_builder.py  test_hospital_scenes.py  test_intervention_evidence_replay.py  test_isaac_m3pro_asset_gate.py  test_isaac_physics_backend.py  test_isaac_replay_contract.py  test_m3pro_mjcf.py  (+40 more)
(+1073 files in other folders)
