[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnm-vlnverse-baseline"
version = "0.1.0"
description = "Reproducible Isaac Sim pipeline for GNM visual-goal navigation on VLNVerse data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "F. Van Laarhoven", email = "F.Van-Laarhoven2@newcastle.ac.uk" }]
keywords = ["robotics", "visual-navigation", "gnm", "vlnverse", "isaac-sim"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26,<2.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=0.9",
    "opencv-python-headless>=4.9",
    "pyyaml>=6.0",
    "omegaconf>=2.3",
    "scipy>=1.12",
    "pandas>=2.0",
    "tqdm>=4.66",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "black>=24",
    "ruff>=0.4",
]
# Track B language-grounding dependencies.
# Install with:  pip install 'gnm-vlnverse[language]'
# Enables CLIP-based text-to-image subgoal retrieval in SubgoalSelector.
# Required model: openai/clip-vit-base-patch16 (downloaded on first use via HuggingFace hub).
language = [
    "transformers>=4.40",
]

[project.scripts]
gnm-train    = "scripts.gnm.train_gnm_entry:main"
gnm-evaluate = "scripts.gnm.eval_gnm_entry:main"

[project.urls]
Repository = "https://github.com/FAVL-AI/gnm-vlnverse-baseline"
Issues     = "https://github.com/FAVL-AI/gnm-vlnverse-baseline/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["gnm_vlnverse*", "scripts*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:launch_testing -p no:launch_ros -p no:ament_xmllint -p no:ament_lint -p no:ament_copyright -p no:ament_flake8 -p no:ament_pep257"

[tool.black]
line-length    = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
