<?xml version="1.0"?>
<package format="3">
  <name>fleet_safe_bringup</name>
  <version>0.1.0</version>
  <description>Fleet-Safe-VLA-OS bringup launch files for H1 in Gazebo and hardware.</description>
  <maintainer email="frankleroyvan@gmail.com">FAVL-AI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>fleet_safe_description</exec_depend>
  <exec_depend>fleet_safe_control</exec_depend>
  <exec_depend>fleet_safe_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
