<?xml version="1.0"?>
<package format="3">
  <name>fleet_safe_control</name>
  <version>0.1.0</version>
  <description>Fleet-Safe joint controller and deployment node for H1.</description>
  <maintainer email="frankleroyvan@gmail.com">FAVL-AI</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>fleet_safe_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
