<?xml version="1.0"?>
<package format="3">
  <name>fleet_safe_perception</name>
  <version>0.1.0</version>
  <description>IMU processing and state estimation for Fleet-Safe-VLA-OS.</description>
  <maintainer email="frankleroyvan@gmail.com">FAVL-AI</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
